--- a/styles/main.scss
+++ b/styles/main.scss
@@ -214,7 +214,7 @@ p {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  padding: 10em 0em
+  padding: 2em 0 5em 0em;
 }
 
 .container {
@@ -317,6 +317,10 @@ strong {
 
 @media only screen and (max-width: 768px) {
 
+  .note {
+    padding: 15px;
+  }
+
   .landing-new {
     background: url(../img/hero-small.jpg);
     background-size: cover;
@@ -356,7 +360,9 @@ strong {
     margin-top: 5vh;
 
     p {
-      font-size: 2em;
+      padding-top: 0.5em;
+      padding-bottom: 1em;
+      font-size: 1.4em;
     }
   }
 
