--- a/styles/main.scss
+++ b/styles/main.scss
@@ -375,6 +375,12 @@ strong {
   .landing-new {
   }
 
+  .wrapper {
+    text-align: center;
+    position: relative;
+    top: 0;
+  }
+
 }
 
 /* Medium Devices, Desktops */
